Fix Items Views not truncating when used in a Selectable List in IE

--- a/packages/terra-list/src/List.scss
+++ b/packages/terra-list/src/List.scss
@@ -28,7 +28,8 @@
   // ========================================================
 
   .chevron {
-    display: flex;
+    display: block;
+    float: right;
     padding-left: 10px;
     padding-right: 10px;
 
